--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3505,6 +3505,11 @@ input, select, textarea {
   border-radius: 3px 0 0 3px;
 }
 
+.prev {
+  left: 0;
+  border-radius: 3px 0 0 3px;
+}
+
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover,
 .next:hover {
